# TSU.FunctionalProgramming

./: CMakeLists.txt  README.md  main.cpp
CStyle/: CStyleSolution.cpp  CStyleSolution.hpp
Modern/: ModernSolution.cpp  ModernSolution.hpp
